Changed bagnet's image height

--- a/recipes/bagnet.html
+++ b/recipes/bagnet.html
@@ -13,7 +13,7 @@
     <h2>Bagnet</h2>
 
     <!-- Image source from Wiki Commons -->
-    <img src="../images/bagnet.jpg" alt="Bagnet">
+    <img src="../images/bagnet.jpg" alt="Bagnet" height="300">
 
     <h3>Description</h3>
     <p>Bagnet is a deep fried crispy pork belly dish that is similar to lechon kawali. It originated from Ilocos and is considered to be a top favorite among Filipinos. </p>
