--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/bagnet.html">Bagnet</a>
+    <h2><a href="./recipes/bagnet.html">Bagnet</a></h2>
+    <h2><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></h2>
 </body>
 </html>
